--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dotenv": "^17.2.3",
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.562.0",
-    "next": "15.1.6",
+    "next": "^15.1.9",
     "next-auth": "^4.24.13",
     "next-cloudinary": "^6.17.5",
     "nodemailer": "^7.0.12",
@@ -43,7 +43,7 @@
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
+    "eslint-config-next": "^15.1.9",
     "prisma": "^7.2.0",
     "tailwindcss": "^4",
     "ts-node": "^1.7.1",
